fixed one more readon for horizontal scroll

--- a/AXIT/css/awesome.css
+++ b/AXIT/css/awesome.css
@@ -15,7 +15,7 @@
 }
 
 .awesome__cards-container {
-  margin: 0 -22.5px;
+  margin: 0 -15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -23,7 +23,7 @@
 
 .awesome__card {
   width: 350px;
-  margin: 31px 22.5px 89px 22.5px;
+  margin: 31px 15px 89px 15px;
 }
 
 .awesome__card-icon {
